<resources>
    <string name="app_name">QuizApp</string>
    <string name="quizapp">QuizApp</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="default_question">What country does this flag belong to?</string>
    <string name="quiz_image_description">Quiz Image</string>
    <string name="option1">Option1</string>
    <string name="option2">Option2</string>
    <string name="option3">Option3</string>
    <string name="option4">Option4</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>
    <string name="result_image">result image</string>
    <string name="hey_congratulations">Hey, Congratulations</string>
    <string name="username">UserName</string>
    <string name="your_score_is_9_out_of_10">Your score is 9 out of 10</string>
    <string name="finish">FINISH</string>
</resources>